$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-7

Version 1.16-6 (closeed Dec 7, 2008)

    * permat*: functions were rationalised, strata argument is
    used instead of reg and hab, and returned object got several
    new arguments. The tide of changes affected methods as well,
    and some other function (adipart, oecosimu). Stratification
    was tested and corrected.

    * permatfull: Jari Oksanen made the C port for the quantitative
    quasiswap algorithm. So the permat* null model family is now
    can be used for a wide array of null model analyses and is
    quick enough to make reliable testing. The permatswap function
    and help page were modified accordingly.

	* plot.rad: gained argument log = "y", allowing log = "xy" so that
	Zipf model is a straight line, or log = "" with arithmetic
	scales.  Not (yet) implemented for Lattice alternatives.
	
Version 1.16-5 (closeed Dec 4, 2008)

	* adipart: new implementation of adipart is now ready to be
	released (needs some testing). Summary and plot methods have been
	removed. The new implementation is based on oecosimu and
	quantitative null model settings via permat.control.  It contains
	only traditional diversity indices. More features will be added
	later, gradually.

	* plot.nestedtemp: label argument accepts a vector of length 2
	with elements for row and column labels, respectively.

	* mite.rda: Oribatid mites got species names (from Pierre
	Legendre's web pages).

	* text.decorana: failed (bug introduced in rev344, on May 9,
	2008). 

	* commsimulator: simulated null models have same column and row
	names as the original input (as.)matrix. There was a problem
	report by a user who tried to use column names during evaluation
	of the statistic. Done by setting attributes (and it would be
	possible to replace dim() setting by attributes() setting in the
	code).    

	* ordisurf: gains argument 'bubble' to use bubble plots for